--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,10 @@ buildNumber.properties
 # https://github.com/takari/maven-wrapper#usage-without-binary-jar
 .mvn/wrapper/maven-wrapper.jar
 
+
+.idea
+
+
 ### Maven Patch ###
 # Eclipse m2e generated files
 # Eclipse Core
