--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,14 @@
             <version>3.0</version>
         </dependency>
 
+        <!--  Brining in JUnit here  -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+
 
     </dependencies>
 
